# Vector-ATS

./: README.md  embedding.py  main.py  pdfreader.py  pyproject.toml
